--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-
 * {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -15,8 +14,8 @@
     margin-left: auto;
     margin-right: auto;
     background-color: #3E3A5B;
-    max-width: 90vw;
-    /* height: fit-content; */
+    max-width: 200vw;
+    height: fit-content;
     position: relative;
     margin-top: 60px;
     margin-bottom: 60px;
@@ -33,7 +32,6 @@
         grid-template-columns: repeat(1,1fr);
         grid-template-rows: repeat(2,1fr);
         height: fit-content;
-
     }
 }
   /* Portrait tablets and small desktops */
@@ -41,7 +39,8 @@
     .container{
         display: grid;
         grid-template-columns: repeat(2,1fr);
-        max-height: 80vh;
+        /* max-height: 80vh; */
+        height: 700px;
     }
 }
 /* Landscape tablets and medium desktops */
@@ -52,15 +51,14 @@
         grid-template-columns: repeat(2,1fr);
         margin-left: auto;
         margin-right: auto;
-        max-height: 80vh;
+        height: 700px;
     }
 }
 /* Large desktops and laptops */
 @media (min-width: 1200px) {
     .container{
         width: 1170px;
-        max-height: 80vh;
-
+        height: 700px;
     }
 }
   .left{
@@ -212,7 +210,6 @@
     color: #f3f3f3;
     background-image: none;
     background-image: linear-gradient(30deg , #04befe, transparent);
-
 }
 .left .load{
     position: relative;
